# Sulfur

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  install.bat  install.sh  makefile
doc/: cast.md  comments.md  literals.md  manifest.md  operators.md  precedence.md  scopes.md  types.md  variables.md
include/: ast.hpp  error.h  error.hpp  lexer.hpp  main.hpp  parser.hpp
include/sulfur/: ast.h  codegen.h  ir.h  lexer.h  parser.h  preprocessor.h  semantic.h
include/sulfur/pipeline/: ast.h  codegen.h  ir.h  lexer.h  parser.h  semantic.h
include/sulfur/pipeline/backend/: codegen.h  ir.h
include/sulfur/pipeline/frontend/: ast.h  lexer.h  parser.h  preprocessor.h
include/sulfur/pipeline/frontend/semantic/: scope.h  semantic.h  symbol.h
include/sulfur/util/: log.h  span.h
include/sulfur/utils/: log.h  span.h  token_utils.h  type_utils.h
scripts/: build-debug.sh  build-release.sh  format.sh  recover.sh  run-testcases.sh
src/: error.cpp  lexer.cpp  main.c  main.cpp  parser.cpp
src/sulfur/: ast.c  codegen.c  ir.c  lexer.c  main.c  parser.c  preprocessor.c  semantic.c
src/sulfur/pipeline/: ast.c  codegen.c  ir.c  lexer.c  parser.c  preprocessor.c  semantic.c
src/sulfur/pipeline/backend/: codegen.c  ir.c
src/sulfur/pipeline/frontend/: ast.c  lexer.c  parser.c  preprocessor.c
src/sulfur/pipeline/frontend/semantic/: scope.c  semantic.c  symbol.c
src/sulfur/util/: log.c
src/sulfur/utils/: log.c  token_utils.c  type_utils.c
testcases/: assign_identifiers_pass.slfr  assign_literals_pass.slfr  declaration_identifiers_pass.slfr  declaration_literals_pass.slfr  explicit_narrowing_pass.slfr  explicit_widening_pass.slfr  implicit_narrowing_fail.slfr  implicit_widening_pass.slfr  operations_pass.slfr
